force-app/main/default/objects/Account/fields/BritesheetCompanyId__c.field-meta.xml
<CustomField>
    <fullName>BritesheetCompanyId__c</fullName>
    <externalId>true</externalId>
    <label>Britesheet Company Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>