force-app/main/default/objects/Account/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <inlineHelpText>Number of Employees</inlineHelpText>
    <label>Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>11-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-500</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>1000-5000</fullName>
            </value>
            <value>
                <fullName>5000-10000</fullName>
            </value>
            <value>
                <fullName>10000+</fullName>
            </value>
            <value>
                <fullName>50000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>