force-app/main/default/objects/Account/fields/InternalCompany__c.field-meta.xml
<CustomField>
    <fullName>InternalCompany__c</fullName>
    <label>Internal Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Britenet Sp. z o.o.</fullName>
            </value>
            <value>
                <fullName>Britenet Professional Services</fullName>
            </value>
            <value>
                <fullName>Britenet Payment Solutions</fullName>
            </value>
            <value>
                <fullName>Britenet Polska</fullName>
            </value>
            <value>
                <fullName>GtFace</fullName>
            </value>
            <value>
                <fullName>Cambria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>