force-app/main/default/objects/Account/fields/ManagementOwner__c.field-meta.xml
<CustomField>
    <fullName>ManagementOwner__c</fullName>
    <label>Management Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Michał Borny</fullName>
            </value>
            <value>
                <fullName>Tomasz Dziki</fullName>
            </value>
            <value>
                <fullName>Tomasz Krajewski</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>