force-app/main/default/objects/Account/fields/MarketShare__c.field-meta.xml
<CustomField>
    <fullName>MarketShare__c</fullName>
    <description>Market Share is used to provide approximate percentage of our resources in total amount of contractors in Account</description>
    <label>Market Share</label>
    <type>TextArea</type>
</CustomField>