force-app/main/default/objects/Account/fields/SA_TABOVER__Merge_Action__c.field-meta.xml
<CustomField>
    <fullName>SA_TABOVER__Merge_Action__c</fullName>
    <formula>HYPERLINK( 
&quot;/merge/accmergewizard.jsp?srch=&quot; &amp; Name &amp; 
&quot;&amp;retURL=%2F&quot; &amp; Id &amp; 
&quot;&amp;cancelURL=%2F&quot; &amp; Id, &quot;Merge Accounts&quot;, &quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge Action</label>
    <type>Text</type>
</CustomField>