force-app/main/default/objects/Account/fields/TotalRevenue_frm__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenue_frm__c</fullName>
    <formula>TotalRevenueFIX__c + TotalRevenueTM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>