force-app/main/default/objects/Account/fields/TotalRevenueFIX__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenueFIX__c</fullName>
    <label>Total Revenue FIX</label>
    <summarizedField>Opportunity.Amount_FP__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Fixed</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>