force-app/main/default/objects/Account/fields/TotalRevenueTM__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenueTM__c</fullName>
    <label>Total Revenue T&amp;M</label>
    <summarizedField>Opportunity.Amount_TM__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Time &amp; Material</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>