force-app/main/default/objects/Account/recordTypes/Britenet.recordType-meta.xml
<RecordType>
    <fullName>Britenet</fullName>
    <active>true</active>
    <description>Britenet Internal</description>
    <label>Britenet</label>
</RecordType>