force-app/main/default/objects/Account/recordTypes/PrivateSector.recordType-meta.xml
<RecordType>
    <fullName>PrivateSector</fullName>
    <active>true</active>
    <description>Account from Private Sector</description>
    <label>Private Sector</label>
</RecordType>