force-app/main/default/objects/Account/recordTypes/PublicSector.recordType-meta.xml
<RecordType>
    <fullName>PublicSector</fullName>
    <active>true</active>
    <description>Account from Public Sector</description>
    <label>Public Sector</label>
</RecordType>