force-app/main/default/objects/Account/listViews/Account_Frozen.listView-meta.xml
<ListView>
    <fullName>Account_Frozen</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Frozen</value>
    </filters>
    <label>Account_Frozen</label>
    <language>en_US</language>
</ListView>