force-app/main/default/objects/Account/listViews/Active_Accounts.listView-meta.xml
<ListView>
    <fullName>Active_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Trusted</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notContain</operation>
        <value>Zień</value>
    </filters>
    <label>Active Accounts</label>
    <language>en_US</language>
</ListView>