force-app/main/default/objects/Account/listViews/BritenetAccounts.listView-meta.xml
<ListView>
    <fullName>BritenetAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Britenet</value>
    </filters>
    <label>Britenet Accounts</label>
</ListView>