force-app/main/default/objects/Account/listViews/My_Active_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Active_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Status__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Frozen</value>
    </filters>
    <label>My Active Accounts</label>
    <language>en_US</language>
</ListView>