force-app/main/default/objects/Account/listViews/Private_sector.listView-meta.xml
<ListView>
    <fullName>Private_sector</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.PrivateSector</value>
    </filters>
    <label>Private_sector</label>
</ListView>