force-app/main/default/objects/Account/listViews/PrivatePublicSectorAccounts.listView-meta.xml
<ListView>
    <fullName>PrivatePublicSectorAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Account.Britenet</value>
    </filters>
    <label>Private &amp; Public Sector Accounts</label>
</ListView>