force-app/main/default/objects/Account/listViews/Public_sector.listView-meta.xml
<ListView>
    <fullName>Public_sector</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.PublicSector</value>
    </filters>
    <label>Public_sector</label>
    <sharedTo>
        <role>Sales</role>
        <role>SalesPublicSector</role>
    </sharedTo>
</ListView>