force-app/main/default/objects/Account/listViews/Wroblewska_Accounts.listView-meta.xml
<ListView>
    <fullName>Wroblewska_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Wroblewska</value>
    </filters>
    <label>Wroblewska-Accounts</label>
    <sharedTo>
        <role>CEO</role>
        <role>Sales</role>
        <role>SalesPublicSector</role>
    </sharedTo>
</ListView>